Fux bug padding on mobile

--- a/app/assets/stylesheets/contacts/_new.scss
+++ b/app/assets/stylesheets/contacts/_new.scss
@@ -75,6 +75,10 @@ textarea.form-control
     font-size: 30px;
     color: #FF6000;
   }
+  #contact_content
+  {
+    padding-left: 10px !important;
+  }
 }
 @media (min-width: 576px) {
    h1.page_title
@@ -82,6 +86,10 @@ textarea.form-control
     margin-top: 120px;
     font-size: 30px;
     color: #FF6000;
+  }
+  #contact_content
+  {
+    padding-left: 10px !important;
   }
 }
 
